[2025-09-09] 로그인 후 친구목록 리스트로 이동되게 수정, 로그인 회원가입 리팩토링