@@ -5,6 +5,7 @@ import java.util.Collections;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -29,35 +30,30 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-            // CSRF 전역 비활성(필요시 특정 경로만 무시로 조정 가능)
-            .csrf(csrf -> csrf.disable())
-
-            // CORS: CorsConfigurationSource 빈을 자동으로 사용
             .cors(Customizer.withDefaults())
-
-            // 인가 규칙: antMatchers → requestMatchers 로 변경
+            .csrf(csrf -> csrf.ignoringRequestMatchers("/chat/**", "/api/**")) // 또는 전역 disable
             .authorizeHttpRequests(auth -> auth
                 .requestMatchers("/api/auth/**", "/chat/**").permitAll()
+                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                 .anyRequest().authenticated()
             )
-
-            // 커스텀 JWT 필터를 UsernamePasswordAuthenticationFilter 앞에 삽입
             .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
-
-            // 기본 로그인 폼/HTTP Basic 비활성(람다/메서드 레퍼런스 스타일)
             .formLogin(AbstractHttpConfigurer::disable)
             .httpBasic(AbstractHttpConfigurer::disable);
 
         return http.build();
     }
 
-    // CORS 설정
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration cfg = new CorsConfiguration();
-        cfg.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
-        cfg.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        cfg.setAllowedHeaders(Collections.singletonList("*"));
+
+        // 개발 포트 다양성 대비(React 3000, Vite 5173 등)
+        cfg.setAllowedOriginPatterns(
+            java.util.List.of("http://localhost:*", "http://127.0.0.1:*")
+        );
+        cfg.setAllowedMethods(java.util.List.of("GET","POST","PUT","DELETE","OPTIONS"));
+        cfg.setAllowedHeaders(java.util.List.of("*"));
         cfg.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
